project(algorithms)

set(CMAKE_CXX_STANDARD 20)

add_executable(algorithms
        src/array.hpp
        src/main.cpp
        src/queue.hpp
        src/string.cpp
        src/string.hpp src/forward_list.hpp
        src/range.hpp
        src/stack.hpp
        src/double_list.hpp
        src/math.hpp
        src/bst.hpp
        src/map.hpp
        src/vector.hpp
        src/sorting.hpp
        src/util.hpp
        src/common.hpp
        src/rbt.hpp
        src/OMap.hpp
        src/record.hpp
        src/rbt.hpp)
